can handle no reminders etc

--- a/Project/DjangoProj/templates/patient.html
+++ b/Project/DjangoProj/templates/patient.html
@@ -224,7 +224,7 @@
               </tbody>
             </table>
           {% else %}
-            <div class="empty_message alert alert-info">
+            <div class="empty_message alert alert-secondary">
               This patient is not on any medication
             </div>
           {% endif %}
@@ -238,7 +238,7 @@
                 </div>
               {% endfor %}
             {% else %}
-              <div class="empty_message alert alert-info">
+              <div class="empty_message alert alert-secondary">
                 This patient does not have any ailments
               </div>
             {% endif %}
@@ -252,7 +252,7 @@
                 </div>
               {% endfor %}
             {% else %}
-              <div class="empty_message alert alert-info">
+              <div class="empty_message alert alert-secondary">
                 This patient does not have any ailments
               </div>
             {% endif %}
@@ -287,7 +287,7 @@
               </tbody>
             </table>
           {% else %}
-            <div class="empty_message alert alert-info">
+            <div class="empty_message alert alert-secondary">
               No upcoming reminders
             </div>
           {% endif %}
