--- a/Project/DjangoProj/static/css/Custom/Patient_1.css
+++ b/Project/DjangoProj/static/css/Custom/Patient_1.css
@@ -141,7 +141,7 @@ body
 {
   display: none;
   position: relative;
-  border: 3px solid #f1f1f1;
+  /*border: 3px solid #f1f1f1;*/
   z-index: 9;
   transition: 0.5s;
 }
@@ -149,7 +149,7 @@ body
 .form-container 
 {
   max-width: 300px;
-  padding: 10px;
+  padding: 0.8em;
   background-color: white;
 }
 
@@ -170,7 +170,7 @@ body
   background-color: red;
 }
 
-.form-container, .create_visit_btn:hover
+.create_visit_btn:hover
 {
   opacity: 1;
 }
@@ -184,7 +184,15 @@ body
 /* Start Exam Button */
 .start_exam_form
 {
-  display: inline-block;
+  margin: 1em 0 0.5em 0;
+  width: 100%;
+  padding: 0;
+
+}
+
+.visit_btn
+{
+  margin: 0 3em 0 6em;
 }
 
 .main:after
