added reminders page

--- a/Project/DjangoProj/templates/patient.html
+++ b/Project/DjangoProj/templates/patient.html
@@ -16,7 +16,7 @@
         <img src="{% static 'images/login_logo.jpg' %}" alt="logo">
       </span>
       <li><a class="active" href="{% url 'patient' %}">Patient</a></li>
-      <li><a href="#">Reminders</a></li>
+      <li><a href="{% url 'reminders' %}">Reminders</a></li>
       <li><a href="#">Diary</a></li>
       <li><a href="#">Till</a></li>
     </ul>
