--- a/Project/DjangoProj/templates/reminders.html
+++ b/Project/DjangoProj/templates/reminders.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8" >
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Patients</title>
+    <title>Reminders</title>
     <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
     <!-- <link rel="stylesheet" type="text/css" href="{% static 'css/Form.css' %}"> -->
     <link rel="stylesheet" href="{% static 'css/Custom/Navbar3.css' %}">
-    <link rel="stylesheet" href="{% static 'css/Custom/Patient_1.css' %}">
+    <link rel="stylesheet" href="{% static 'css/Custom/Reminders2.css' %}">
     <script type="text/javascript" src="{% static 'js/Custom/Navbar.js' %}"></script>
   </head>
   <body>
@@ -15,54 +15,51 @@
       <span class="navbar_logo">
         <img src="{% static 'images/login_logo.jpg' %}" alt="logo">
       </span>
-      <li><a class="active" href="{% url 'patient' %}">Patient</a></li>
-      <li><a href="#">Reminders</a></li>
+      <li><a href="{% url 'patient' %}">Patient</a></li>
+      <li><a class="active" href="{% url 'reminders' %}">Reminders</a></li>
       <li><a href="#">Diary</a></li>
       <li><a href="#">Till</a></li>
     </ul>
     <div class="main">
-
-      
-
-    {% if reminders is not None %}
-      <div class="search_table">
-        <table class="table">
-          <thead class="thead-inverse">
-            <tr class="bg-dark text-white">
-              <th>Patient Name</th>
-              <th>Date</th>
-              <th>Location</th>
-              <th>Notes</th>
-            </tr>
-          </thead>
-          <tbody>
-            {% for rem in reminders %}
-              <tr>
-                <td>
-                 <a href="{% url 'patient_info' id=rem.patient.id %}">
-                 	{{ rem.patient.patient_name }}
-                 </a>
-                </td>
-                <td class="align-middle">
-                  {{ rem.rem_date }}
-                </td>
-                <td class="align-middle">
-                  {{ rem.location }}
-                </td>
-                <td class="align-middle">
-                  {{ rem.message }}
-                </td>
-              </tr>
-            {% endfor %}
-          </tbody>
-        </table>
-      </div>
-    {% endif %}
-    
+      <div class="section">
+        {% if reminders is not None %}
+        <div class="info">
+          <h4>Upcoming Reminders</h4>
+            <div class="reminders_table">
+              <table class="table">
+                <thead class="thead-inverse">
+                  <tr class="bg-dark text-white">
+                    <th>Patient Name</th>
+                    <th>Date</th>
+                    <th>Location</th>
+                    <th>Notes</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  {% for rem in reminders %}
+                    <tr>
+                      <td>
+                       <a href="{% url 'patient_info' id=rem.patient.id %}">
+                        {{ rem.patient.patient_name }}
+                       </a>
+                      </td>
+                      <td class="align-middle">
+                        {{ rem.rem_date }}
+                      </td>
+                      <td class="align-middle">
+                        {{ rem.location }}
+                      </td>
+                      <td class="align-middle">
+                        {{ rem.message }}
+                      </td>
+                    </tr>
+                  {% endfor %}
+                </tbody>
+              </table>
+            </div>
           </div>
-        </div>
+        {% endif %}
       </div>
-    {% endif %}
     </div>
     <script>
       window.onscroll = function() {myFunction()};
