--- a/Project/DjangoProj/templates/registration/login.html
+++ b/Project/DjangoProj/templates/registration/login.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<title>Login</title>
 		<!-- <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}"> -->
-		<link rel="stylesheet" href="{% static 'css/Custom/Login2.css' %}">
+		<link rel="stylesheet" href="{% static 'css/Custom/Login_1.css' %}">
 	</head>
 	<body>
 		<div class="main">
