exam working again

--- a/Project/DjangoProj/templates/results.html
+++ b/Project/DjangoProj/templates/results.html
@@ -53,7 +53,7 @@
 	      	<form method="post">
 				{% csrf_token %}
 				{{ further_action_form.as_p }}
-				<button class="btn btn-outline-dark" type="submit">Create Reminder</button>
+				<button class="btn btn-outline-dark" type="submit">Proceed</button>
 			</form>
 		</div>	
 	</div>
