fixed position of create visit form

--- a/Project/DjangoProj/static/css/Custom/Patient_2.css
+++ b/Project/DjangoProj/static/css/Custom/Patient_2.css
@@ -146,6 +146,12 @@ body
   transition: 0.5s;
 }
 
+#myForm form
+{
+  margin: 0 auto;
+  margin-top: 1em;
+}
+
 .form-container 
 {
   max-width: 300px;
