--- a/Project/DjangoProj/templates/results.html
+++ b/Project/DjangoProj/templates/results.html
@@ -6,6 +6,7 @@
     <title>Results</title>
     <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/Custom/Navbar3.css' %}">
+    <link rel="stylesheet" href="{% static 'css/Custom/Reminders2.css' %}">
     <script type="text/javascript" src="{% static 'js/Custom/Navbar.js' %}"></script>
   </head>
 	<body>
@@ -17,72 +18,66 @@
 			<li><a href="{% url 'reminders' %}">Reminders</a></li>
 			<li><a href="#">Diary</a></li>
 			<li><a href="#">Till</a></li>
-		</ul>
-		<div class="main">
-			<div class="section">
-				{% if reminders is not None %}
+			</ul>
+			<div class="main">
+				<div class="section">
 					<div class="info">
-						    <div class="container">
-      <ol class="breadcrumb my-4">
-        <li class="breadcrumb-item active">The Results of the Exam are as Follows</li>
-      </ol>
-      <table class="table">
-        <thead class="thead-inverse">
-          <tr class="bg-dark text-white">
-            <th>Disease</th>
-            <th>Prediction</th>
-          </tr>
-        </thead>
-        <tbody>
-            <tr>
-              <td class="disease">
-                Diabetes
-              </td>
-              <td class="align-middle">
-              	{% if diabetes_pred == 0 %}
-					Patient is unlikely to have diabetes <br>
-				{% endif %}
+						<ol class="breadcrumb my-4">
+							<li class="breadcrumb-item active">The Results of the Exam are as Follows</li>
+						</ol>
+						<table class="table">
+							<thead class="thead-inverse">
+								<tr class="bg-dark text-white">
+									<th>Disease</th>
+									<th>Prediction</th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr>
+									<td class="disease">
+										Diabetes
+									</td>
+									<td class="align-middle">
+										{% if diabetes_pred == 0 %}
+											Patient is unlikely to have diabetes <br>
+										{% endif %}
 
-				{% if diabetes_pred == 1 %}
-					Patient is likely to have diabetes <br>
-				{% endif %}
-              </td>
-            </tr>
-            <tr>
-              <td class="disease">
-                Heart Disease
-              </td>
-              <td class="align-middle">
-				{% if heart_pred == 0 %}
-					Patient is unlikely to have heart disease <br>
-				{% endif %}
+										{% if diabetes_pred == 1 %}
+											Patient is likely to have diabetes <br>
+										{% endif %}
+									</td>
+								</tr>
+								<tr>
+									<td class="disease">
+										Heart Disease
+									</td>
+									<td class="align-middle">
+										{% if heart_pred == 0 %}
+											Patient is unlikely to have heart disease <br>
+										{% endif %}
 
-				{% if heart_pred == 1 %}
-					Patient is likely to have heart disease <br>
-				{% endif %}
-              </td>
-            </tr>
-        </tbody>
-      </table>
-      <div class="container">
-	      	<form method="post">
-				{% csrf_token %}
-				<!-- {{ further_action_form.as_p }} -->
-				<div class="form-control">
-					<label>Further Action:<label>
-					{{ further_action_form.further_actions }}
-				</div>
-				{% if further_action_form.further_actions == Referral %}
-					if this
-				{% else %}
-					else this
-				{% endif %}
-				<button class="btn btn-outline-dark" type="submit">Proceed</button>
-			</form>
-		</div>	
-	</div>
+										{% if heart_pred == 1 %}
+											Patient is likely to have heart disease <br>
+										{% endif %}
+									</td>
+								</tr>
+							</tbody>
+						</table>
+						<div class="container">
+						<form method="post">
+							{% csrf_token %}
+							{{ further_action_form.as_p }}
+							<!-- <label>Further Action:<label>
+								{{ further_action_form.further_actions }}
+							{% if further_action_form.further_actions == Referral %}
+								if this
+							{% else %}
+								else this
+							{% endif %} -->
+							<button class="btn btn-outline-dark" type="submit">Proceed</button>
+						</form>
 					</div>
-				{% endif %}
+				</div>
 			</div>
 		</div>
 	<script>
