--- a/Project/DjangoProj/templates/results.html
+++ b/Project/DjangoProj/templates/results.html
@@ -6,7 +6,8 @@
     <title>Results</title>
     <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/Custom/Navbar3.css' %}">
-    <link rel="stylesheet" href="{% static 'css/Custom/Reminders2.css' %}">
+    <!-- <link rel="stylesheet" href="{% static 'css/Custom/Reminders2.css' %}"> -->
+    <link rel="stylesheet" href="{% static 'css/Custom/Results_1.css' %}">
     <script type="text/javascript" src="{% static 'js/Custom/Navbar.js' %}"></script>
   </head>
 	<body>
@@ -14,7 +15,7 @@
 			<span class="navbar_logo">
 				<img src="{% static 'images/login_logo.jpg' %}" alt="logo">
 			</span>
-			<li><a href="{% url 'patient' %}">Patient</a></li>
+			<li><a class="active" href="{% url 'patient' %}">Patient</a></li>
 			<li><a href="{% url 'reminders' %}">Reminders</a></li>
 			<li><a href="#">Diary</a></li>
 			<li><a href="#">Till</a></li>
@@ -63,7 +64,7 @@
 								</tr>
 							</tbody>
 						</table>
-						<div class="container">
+						<div class="proceed_form">
 						<form method="post">
 							{% csrf_token %}
 							{{ further_action_form.as_p }}
@@ -74,7 +75,10 @@
 							{% else %}
 								else this
 							{% endif %} -->
-							<button class="btn btn-outline-dark" type="submit">Proceed</button>
+							<button class="btn btn-primary btn-lg btn-block">
+								Proceed
+							</button>
+						<!-- 	<button class="btn btn-outline-dark" type="submit">Proceed</button> -->
 						</form>
 					</div>
 				</div>
