reminder part works (except for rem_date)

--- a/Project/DjangoProj/static/css/Custom/Results_3.css
+++ b/Project/DjangoProj/static/css/Custom/Results_3.css
@@ -32,11 +32,21 @@ body
   padding: 0 2em 0 2em;
 }
 
+.referral_field
+{
+  display: none;
+}
+
 .proceed_form form
 {
   margin: 0 auto;
   padding: 2em 2em 0 2em;
   max-width: 500px;
+}
+
+.field
+{
+  margin-bottom: 0.5em;
 }
 
 .info
