--- a/Project/DjangoProj/templates/results.html
+++ b/Project/DjangoProj/templates/results.html
@@ -6,8 +6,7 @@
     <title>Results</title>
     <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/Custom/Navbar3.css' %}">
-    <!-- <link rel="stylesheet" href="{% static 'css/Custom/Reminders2.css' %}"> -->
-    <link rel="stylesheet" href="{% static 'css/Custom/Results_1.css' %}">
+    <link rel="stylesheet" href="{% static 'css/Custom/Results_3.css' %}">
     <script type="text/javascript" src="{% static 'js/Custom/Navbar.js' %}"></script>
   </head>
 	<body>
@@ -67,10 +66,17 @@
 						<div class="proceed_form">
 						<form method="post">
 							{% csrf_token %}
-							{{ further_action_form.as_p }}
-							<!-- <label>Further Action:<label>
-								{{ further_action_form.further_actions }}
-							{% if further_action_form.further_actions == Referral %}
+							<div class="field">
+								<label>Further Action:</label>
+									{{ further_action_form.further_actions }}
+							</div>
+							<div class="referral_field field">
+								{{ further_action_form.ref_to }}
+							</div>
+							<div class="referral_field field">
+								{{ further_action_form.ref_reason }}
+							</div>
+							<!-- {% if further_action_form.further_actions == Referral %}
 								if this
 							{% else %}
 								else this
@@ -85,7 +91,29 @@
 			</div>
 		</div>
 	<script>
-		
+		function changeOption()
+		{
+			var option = document.getElementsByClassName("form-control");
+			var extra_fields = document.getElementsByClassName("referral_field");
+
+			if (option[0].value == 'Referral')
+			{
+				for (i = 0; i < extra_fields.length; i++)
+				{
+					extra_fields[i].style.display = "block";
+					option[i+1].value = '';
+				}
+			}
+
+			else
+			{
+				for (i = 0; i < extra_fields.length; i++)
+				{
+					extra_fields[i].style.display = "none";
+					option[i+1].value = 'None';
+				}
+			}
+		}
 	</script>
 	</body>
 </html>
