--- a/Project/DjangoProj/templates/patient.html
+++ b/Project/DjangoProj/templates/patient.html
@@ -307,7 +307,7 @@
             Create Visit
           </button> -->
           <button class="btn btn-primary btn-lg btn-block" onclick="popUpForm()">
-            Create Visit
+            Create Appointment
           </button>
           <!-- <form class="start_exam_form" method="post">
             {% csrf_token %}
