starting to build id3  dt manually

--- a/Project/DjangoProj/templates/results.html
+++ b/Project/DjangoProj/templates/results.html
@@ -76,6 +76,9 @@
 							<div class="referral_field field">
 								{{ further_action_form.ref_reason }}
 							</div>
+							<div class="date_field">
+								
+							</div>
 							<!-- {% if further_action_form.further_actions == Referral %}
 								if this
 							{% else %}
