--- a/Project/DjangoProj/templates/patient.html
+++ b/Project/DjangoProj/templates/patient.html
@@ -17,7 +17,7 @@
       </span>
       <li><a class="active" href="{% url 'patient' %}">Patient</a></li>
       <li><a href="{% url 'reminders' %}">Reminders</a></li>
-      <li><a href="#">Diary</a></li>
+      <li><a href="{% url 'diary' %}">Diary</a></li>
       <li><a href="#">Till</a></li>
     </ul>
     <div class="main">
