working on testing

--- a/Project/DjangoProj/templates/diary.html
+++ b/Project/DjangoProj/templates/diary.html
@@ -31,8 +31,8 @@
                   <tr class="bg-dark text-white">
                     <th>Patient Name</th>
                     <th>Date</th>
-                    <th>Location</th>
-                    <th>Notes</th>
+                    <th>Reason</th>
+                    <th>Doctor</th>
                   </tr>
                 </thead>
                 <tbody>
