--- a/Project/DjangoProj/templates/diary.html
+++ b/Project/DjangoProj/templates/diary.html
@@ -31,6 +31,7 @@
                   <tr class="bg-dark text-white">
                     <th>Patient Name</th>
                     <th>Date</th>
+                    <th>Length</th>
                     <th>Reason</th>
                     <th>Doctor</th>
                   </tr>
@@ -45,6 +46,9 @@
                       </td>
                       <td class="align-middle">
                         {{ app.date }}
+                      </td>
+                      <td class="align-middle">
+                        {{ app.app_length }} Minutes
                       </td>
                       <td class="align-middle">
                         {{ app.reason }}
