--- a/Project/DjangoProj/templates/results.html
+++ b/Project/DjangoProj/templates/results.html
@@ -108,10 +108,10 @@
 				}
 			}
 
-			else if (option[0].value == 'Follow up appointment')
-			{
+			// else if (option[0].value == 'Follow up appointment')
+			// {
 				
-			}
+			// }
 
 			else
 			{
