--- a/Project/DjangoProj/static/css/Custom/Exam2.css
+++ b/Project/DjangoProj/static/css/Custom/Exam2.css
@@ -35,12 +35,27 @@ body
   width: 50%;
 }
 
+.left_section .field
+{
+  margin-top: 1.1em;
+}
+
 .info 
 {
   background-color: white;
   margin: 0.5em;
   padding: 2em;
   min-height: 100%;
+}
+
+.submit_btn
+{
+  background-color: white;
+  margin: 0.5em;
+  padding: 1.5em;
+  float: left;
+  min-width: 99%;
+  position: relative;
 }
 
 .info > h4
