--- a/Project/DjangoProj/static/css/Custom/Login_2.css
+++ b/Project/DjangoProj/static/css/Custom/Login_2.css
@@ -8,6 +8,7 @@ body
   margin: 1.5em 5em 0 5em;
   padding: 10px;
   min-height: 100%;
+  overflow: hidden;
 }
 
 .main
@@ -34,7 +35,7 @@ body
 .login_section form
 {
   min-width: 220px;
-  margin-bottom: 6em;
+  margin-top: -10em;
 }
 
 .validation
